* Minor clean-ups of references.

--- a/doc/references/dsn.bib
+++ b/doc/references/dsn.bib
@@ -23,8 +23,8 @@ abstract={ This paper describes a decentralized consistency protocol for surviva
 
 @inproceedings{cachin:optimal-resilience-for-erasure-coded-byzantine-distributed-storage:dsn2006,
   author    = {Christian Cachin and Stefano Tessaro},
-  title     = {Optimal resilience for erasure-coded Byzantine distributed storage},
-  booktitle = {Proceedings of the  International Conference on Dependable Systems and Networks (DSN)},
+  title     = {Optimal resilience for erasure-coded {B}yzantine distributed storage},
+  booktitle = dsn2006,
   year      = {2006},
   pages     = {115--124},
   ee        = {http://www.zurich.ibm.com/~cca/papers/atomic.pdf},
