--- a/doc/references/fast.bib
+++ b/doc/references/fast.bib
@@ -1,4 +1,5 @@
-@string{fast2003 = "Proceedings of the 2nd USENIX Conference on File and Storage Technologies"}
+@string{fast2003 = "FAST'03: Proceedings of the 2nd USENIX Conference on File and Storage Technologies"}
+@string{fast2005 = "FAST'05: Proceedings of the 4th USENIX Conference on File and Storage Technologies"}
 
 @inproceedings{rhea:pond:fast2003,
  author = {Rhea, Sean and Eaton, Patrick and Geels, Dennis and Weatherspoon, Hakim and Zhao, Ben and Kubiatowicz, John},
@@ -16,7 +17,7 @@
 @inproceedings{abd-el-malek:ursa-minor:fast2005,
  author = {Abd-El-Malek, Michael and Courtright,II, William V. and Cranor, Chuck and Ganger, Gregory R. and Hendricks, James and Klosterman, Andrew J. and Mesnier, Michael and Prasad, Manish and Salmon, Brandon and Sambasivan, Raja R. and Sinnamohideen, Shafeeq and Strunk, John D. and Thereska, Eno and Wachs, Matthew and Wylie, Jay J.},
  title = {Ursa minor: versatile cluster-based storage},
- booktitle = {FAST'05: Proceedings of the 4th conference on USENIX Conference on File and Storage Technologies},
+ booktitle = fast05,
  year = {2005},
  pages = {59--72},
  location = {San Francisco, CA},
