--- a/doc/references/icdcs.bib
+++ b/doc/references/icdcs.bib
@@ -7,7 +7,7 @@
                Gianpaolo Cugola},
   title     = {Epidemic Algorithms for Reliable Content-Based Publish-Subscribe:
                An Evaluation},
-  booktitle = {icdcs2004},
+  booktitle = icdcs2004,
   month     = {March},
   year      = {2004},
   pages     = {552--561},
