--- a/doc/references/osdi.bib
+++ b/doc/references/osdi.bib
@@ -80,7 +80,7 @@ year = "2002",
   author    = {John R. Douceur and
                Jon Howell},
   title     = {Distributed Directory Service in the Farsite File System},
-  booktitle = {osdi2006},
+  booktitle = osdi2006,
   year      = {2006},
   pages     = {321--334},
   ee        = {http://www.usenix.org/events/osdi06/tech/douceur.html},
