--- a/doc/references/sosp.bib
+++ b/doc/references/sosp.bib
@@ -29,7 +29,7 @@ year = "2007"
 
 @inproceedings{ghemawat:google-fs:sosp2003,
   author = {Ghemawat, Sanjay and Gobioff, Howard and Leung, Shun-Tak},
-  title = {The Google file system},
+  title = {The {G}oogle {F}ile {S}ystem},
   booktitle = sosp2003,
   doi = {10.1145/945445.945450},
   isbn = {1581137575},
