--- a/doc/references/sss.bib
+++ b/doc/references/sss.bib
@@ -3,7 +3,7 @@
 @inproceedings{baldoni:unconscious-eventual-consistency-with-gossips:sss2006,
     author = {Roberto Baldoni and Rachid Guerraoui and Ron R. Levy and Vivien Quéma and Sara Tucci Piergiovanni},
     title = {Unconscious eventual consistency with gossips},
-    booktitle = {sss2006},
+    booktitle = sss2006,
     year = {2006},
     pages = {65--81},
     publisher = {Springer},
