* Minor clean-ups of references.

--- a/doc/references/sosp.bib
+++ b/doc/references/sosp.bib
@@ -59,7 +59,7 @@ year = "2007"
   year     = 2001,
   booktitle = sosp2001,
   location = "Chateau Lake Louise, Banff, Canada",
-  month    = October,
+  month    = "October",
   pages    = "188--201",
   abstract = {This paper presents and evaluates the storage management
 and caching in PAST, a large-scale peer-to-peer persistent
