--- a/doc/references/osdi.bib
+++ b/doc/references/osdi.bib
@@ -1,78 +1,57 @@
-@string{osdi94 = "OSDI '94: Proceedings of the First Conference on Operating Systmes Design and Implementation"}
-@string{osdi02 = "OSDI '02: Proceedings of the Fifth Conference on Operating Systmes Design and Implementation"}
-@string{osdi04 = "OSDI '04: Proceedings of the Sixth Conference on Operating Systems Design and Implementation"}
-@string{osdi06 = "OSDI '06: Proceedings of the Seventh Conference on Operating Systems Design and Implementation"}
-@string{osdi08 = "OSDI '08: Proceedings of the Eight Conference on Operating Systems Design and Implementation"}
+%See names-long.bib and names-short.bib for conference information.
 
 @inproceedings{dahlin:cache:osdi1994,
 author = "Michael D. Dahlin and Randolph Y. Wang and Thomas E. Anderson and David A. Patterson",
 title = "Cooperative Caching: {U}sing Remote Client Memory to Improve File System Performance",
-booktitle = osdi94,
+crossref = {osdi94},
 pages = "267--280",
-month = "November",
-year = "1994",
 }
 
 @inproceedings{musuvathi:chess:osdi2008,
 author = "Madanlal Musuvathi and Shaz Qadeer and Thomas Ball and Gerard Basler and Piramanayagam Arumuga Nainar and Iulian Neamtiu",
 title = "Finding and Reproducing {H}eisenbugs in Concurrent Programs",
-booktitle = osdi08,
-month = "December",
-year = "2008",
+crossref = {osdi08},
 pages = "267--280",
 }
 
 @inproceedings{yin+kklm:gadara,
 author = "Wang, Y. and Kelly, T. and Kudlur, M. and Lafortune, S. and Mahlke, S.",
 title = "Gadara: {D}ynamic deadlock avoidance for multithreaded programs",
-booktitle = osdi08,
-month = "December",
-year = "2008",
+crossref = {osdi08},
 }
 
 @inproceedings{jula+tzc:deadlock,
 author = "Jula, H. and Tralamazza, D. and Zamfir, C. and Candea, G.",
 title = "Deadlock Immunity: {E}nabling Systems to Defend Against Deadlocks",
-booktitle = osdi08,
-month = "December",
-year = "2008",
+crossref = {osdi08},
 }
 
 @inproceedings{dean+g-mapreduce:2004,
  author = {Dean, Jeffrey and Ghemawat, Sanjay},
  title = {MapReduce: simplified data processing on large clusters},
- booktitle = osdi04,
+ crossref = {osdi04},
  year = {2004},
- location = {San Francisco, CA},
- publisher = {USENIX Association},
  }
 
 @inproceedings{chang:bigtable:osdi2006,
     author = "F. Chang and J. Dean and S. Ghemawhat and W.C. Hsieh and D.A. Wallach and M. Burrows and T. Chandra and A. Fikes and R.E. Gruber",
     title = "Bigtable: {A} distributed storage system for structured data",
-    booktitle = osdi06,
+    crossref = {osdi06},
     pages = "205-218",
-month = "November",
-    year = "2006"
 }
 
 @inproceedings{vahdat:modelnet:osdi2002,
 author = "Amin Vahdat and Ken Yocum and Kevin Walsh and Priya Mahadevan and Dejan Kosti\'{c} and Jeff Chase and David Becker",
 title = "Scalability and Accuracy in a Large-Scale Network Emulator",
-booktitle = osdi02,
-year = "2002",
+crossref = {osdi02},
 }
 
 @inproceedings{saito:pangaea:osdi2002,
  author = {Saito, Yasushi and Karamanolis, Christos and Karlsson, Magnus and Mahalingam, Mallik},
  title = {Taming aggressive replication in the {P}angaea wide-area file system},
- booktitle = osdi02,
- year = {2002},
+ crossref = {osdi02},
  pages = {15--30},
- location = {Boston, Massachusetts},
  doi = {http://doi.acm.org/10.1145/1060289.1060292},
- publisher = {ACM},
- address = {New York, NY, USA},
 }
 
 
@@ -80,8 +59,7 @@ year = "2002",
   author    = {John R. Douceur and
                Jon Howell},
   title     = {Distributed Directory Service in the Farsite File System},
-  booktitle = osdi06,
-  year      = {2006},
+  crossref = {osdi06},
   pages     = {321--334},
   ee        = {http://www.usenix.org/events/osdi06/tech/douceur.html},
   abstract  = {We present the design, implementation, and evaluation of a fully distributed directory service for Farsite, a logically centralized file system that is physically implemented on a loosely coupled network of desktop computers. Prior to this work, the Farsite system included distributed mechanisms for file content but centralized mechanisms for file metadata. Our distributed directory service introduces tree-structured file identifiers that support dynamically partitioning metadata at arbitrary granularity, recursive path leases for scalably maintaining name-space consistency, and a protocol for consistently performing operations on files managed by separate machines. It also mitigates metadata hotspots via file-field leases and the new mechanism of disjunctive leases. We experimentally show that Farsite can dynamically partition file-system metadata while maintaining full file-system semantics.}
