--- a/doc/references/web-sites.bib
+++ b/doc/references/web-sites.bib
@@ -46,6 +46,13 @@
   note = "Available at \url{http://googleblog.blogspot.com/2008/11/sorting-1pb-with-mapreduce.html} Accessed June 2009",
 }
 
+@misc{keynote/google-building-distrib-sys/ladis-2009,
+  author = "Jeff Dean",
+  title = "Designs, Lessons and Advice from Building Large Distributed Systems",
+  note = "Keynote slides at \url{http://www.cs.cornell.edu/projects/ladis2009/talks/dean-keynote-ladis2009.pdf} Accessed December 2009",
+  comment = "Includes failure data from Google's datacenters",
+}
+
 @misc{keynote/google-power-efficiency/asplos-2009,
   author = "Luiz Andr\'{e} Barroso",
   title = "Saving the Planet with Systems Research",
