web-sites.bib: add mills ntp reference

--- a/doc/references/web-sites.bib
+++ b/doc/references/web-sites.bib
@@ -161,3 +161,9 @@
   note = "Available at \url{http://www.boost.org}.  Accessed April 2008",
   key = "boost"
 }
+
+@misc{mills:ntp-web,
+  author = "Mills, D. L.",
+  title = "Network Time Synchronization Research Project",
+  note = "Available at \url{http://www.cis.udel.edu/~mills/ntp.html}.  Accessed April 2008",
+}
