--- a/doc/references/nsdi.bib
+++ b/doc/references/nsdi.bib
@@ -1,55 +1,36 @@
-@string{nsdi2006 = "NSDI06: Proceedings of the Third Symposium on Networked Systems Design and Implementation"} %long
-%short: @string{nsdi2006 = "Proc. 3rd NSDI"} 
-
-@string{nsdi2007 = "NSDI07: Proceedings of the Fourth Symposium on Networked Systems Design and Implementation"} %long
-%short: @string{nsdi2007 = "Proc. 4th NSDI"} 
-
-@string{nsdi2008 = "NSDI08: Proceedings of the Fifth Symposium on Networked Systems Design and Implementation"} %long
-%short: @string{nsdi2008 = "Proc. 5th NSDI"} 
-
-@string{nsdi2009 = "NSDI09: Proceedings of the Sixth Symposium on Networked Systems Design and Implementation"} %long
+%Conference information in venues-long.bib and venues-short.bib
 
 @inproceedings{reynolds:pip:nsdi2006,
   author = "Patrick Reynolds and Charles Killian and Janet L. Wiener and Jeffrey C. Mogul and Mehul A. Shah and Amin Vahdat",
   title = "Pip: {D}etecting the unexpected in distributed systems",
-  booktitle = nsdi2006,
+  crossref = {nsdi06},
   pages = "115--128",
-  month = "May",
-  year = "2006",
   note = "Available at \url{http://www.usenix.org/events/nsdi06/tech/full_papers/reynolds/reynolds.pdf} Accessed June 2009"
 }
 
 @inproceedings{stribling:wheelfs:nsdi2009,
  author = {Stribling, Jeremy and Sovran, Yair and Zhang, Irene and Pretzer, Xavid and Li, Jinyang and Kaashoek, M. Frans and Morris, Robert},
  title = {Flexible, wide-area storage for distributed systems with WheelFS},
- booktitle = nsdi2009,
- year = {2009},
+ crossref = {nsdi09},
  pages = {43--58},
- location = {Boston, Massachusetts},
- publisher = {USENIX Association},
- address = {Berkeley, CA, USA},
 }
 
 @inproceedings{gupta:diecast:nsdi2008,
 author = "Diwaker Gupta and Kashi V. Vishwanath and Amin Vahdat",
 title = "{DieCast}: {T}esting Distributed Systems with an Accurate Scale Model",
-booktitle = nsdi2008,
-year = "2008",
+crossref = {nsdi08},
 }
 
 @inproceedings{liu:wids-checker:nsdi2007,
   author = "Xuezheng Liu and  Wei Lin and Aimin Pan and Zheng Zhang",
   title = "{WiDS} Checker: {Combating} Bugs in Distributed Systems",
-  booktitle = nsdi2007,
-  year = "2007",
+  crossref = {nsdi07},
 }
 
 @inproceedings {liu:d3s:nsdi2008,
 author = "Xuezheng Liu and Zhenyu Guo and Xi Wang and Feibo Chen and Xiaochen Lian and Jian Tang and Ming Wu and M. Frans Kaashoek and Zheng Zhang",
 title = "D$^3${S}: Debugging deployed distributed systems",
-booktitle = nsdi2008,
-year = "2008",
-month = "April",
+crossref = {nsdi08},
 pages = "423--437",
 }
 
@@ -60,7 +41,6 @@ pages = "423--437",
                Timothy Roscoe and
                Ion Stoica},
   title     = {Friday: {G}lobal Comprehension for Distributed Replay},
-  booktitle = nsdi2007,
-  year      = {2007},
+  crossref = {nsdi07},
   ee        = {http://www.usenix.org/events/nsdi07/tech/geels.html},
 }
