--- a/doc/references/venues-long.bib
+++ b/doc/references/venues-long.bib
@@ -127,3 +127,33 @@
  year = {2009},
  month = {March},
 }
+
+% NSDI
+
+@PROCEEDINGS {nsdi06,
+ title = {NSDI '06: Proceedings of the Third Symposium on Networked Systems Design and Implementation},
+ booktitle = {NSDI '06: Proceedings of the Third Symposium on Networked Systems Design and Implementation},
+ year = {2006},
+ month = {May},
+}
+
+@PROCEEDINGS {nsdi07,
+ title = {NSDI '07: Proceedings of the Fourth Symposium on Networked Systems Design and Implementation},
+ booktitle = {NSDI '07: Proceedings of the Fourth Symposium on Networked Systems Design and Implementation},
+ year = {2007},
+ month = {April},
+}
+
+@PROCEEDINGS {nsdi08,
+ title = {NSDI '08: Proceedings of the Fifth Symposium on Networked Systems Design and Implementation},
+ booktitle = {NSDI '08: Proceedings of the Fifth Symposium on Networked Systems Design and Implementation},
+ year = {2008},
+ month = {April},
+}
+
+@PROCEEDINGS {nsdi09,
+ title = {NSDI '09: Proceedings of the Sixth Symposium on Networked Systems Design and Implementation},
+ booktitle = {NSDI '09: Proceedings of the Sixth Symposium on Networked Systems Design and Implementation},
+ year = {2009},
+ month = {April},
+}
