--- a/doc/references/venues-short.bib
+++ b/doc/references/venues-short.bib
@@ -123,3 +123,33 @@
  year = {2009},
  month = {March},
 }
+
+% NSDI
+
+@PROCEEDINGS {nsdi06,
+ title = {NSDI'06},
+ booktitle = {NSDI'06},
+ year = {2006},
+ month = {May},
+}
+
+@PROCEEDINGS {nsdi07,
+ title = {NSDI'07},
+ booktitle = {NSDI'07},
+ year = {2007},
+ month = {April},
+}
+
+@PROCEEDINGS {nsdi08,
+ title = {NSDI'08},
+ booktitle = {NSDI'08},
+ year = {2008},
+ month = {April},
+}
+
+@PROCEEDINGS {nsdi09,
+ title = {NSDI'09},
+ booktitle = {NSDI'09},
+ year = {2009},
+ month = {April},
+}
