--- a/doc/references/venues-long.bib
+++ b/doc/references/venues-long.bib
@@ -157,3 +157,57 @@
  year = {2009},
  month = {April},
 }
+
+% DSN
+
+@PROCEEDINGS { dsn00,
+ title = {Proceedings of the International Conference on Dependable Systems and Networks (DSN'00)},
+ booktitle = {Proceedings of the International Conference on Dependable Systems and Networks (DSN'00)},
+ year = {2000},
+ month = {June},
+}
+
+@PROCEEDINGS { dsn04,
+ title = {Proceedings of the International Conference on Dependable Systems and Networks (DSN'04)},
+ booktitle = {Proceedings of the International Conference on Dependable Systems and Networks (DSN'04)},
+ year = {2004},
+ month = {June},
+}
+
+@PROCEEDINGS { dsn06,
+ title = {Proceedings of the International Conference on Dependable Systems and Networks (DSN'06)},
+ booktitle = {Proceedings of the International Conference on Dependable Systems and Networks (DSN'06)},
+ year = {2006},
+ month = {June},
+}
+
+% FAST
+
+@PROCEEDINGS { fast03,
+ title = {FAST'03: Proceedings of the 2nd USENIX Conference on File and Storage Technologies},
+ booktitle = {FAST'03: Proceedings of the 2nd USENIX Conference on File and Storage Technologies},
+ year = {2003},
+ month = {March},
+ location = {San Francisco, CA},
+ publisher = {USENIX Association},
+ address = {Berkeley, CA, USA},
+}
+
+@PROCEEDINGS { fast05,
+ title = {FAST'05: Proceedings of the 4th USENIX Conference on File and Storage Technologies},
+ booktitle = {FAST'05: Proceedings of the 4th USENIX Conference on File and Storage Technologies},
+ year = {2005},
+ month = {December},
+ location = {San Francisco, CA},
+ publisher = {USENIX Association},
+ address = {Berkeley, CA, USA},
+}
+
+% SIGCOM
+
+@PROCEEDINGS { sigcomm01,
+ title = {SIGCOMM '01: Proceedings of the 2001 Conference on Applications, Technologies, Architectures, and Protocols for Computer Communications},
+ booktitle = {SIGCOMM '01: Proceedings of the 2001 Conference on Applications, Technologies, Architectures, and Protocols for Computer Communications},
+ year = {2001},
+ month = {August},
+}
