--- a/doc/references/sigcomm.bib
+++ b/doc/references/sigcomm.bib
@@ -1,20 +1,16 @@
-@string{sigcomm2001 = "SIGCOMM '01: Proceedings of the 2001 Conference on Applications, Technologies, Architectures, and Protocols for Computer Communications"}
+%Venue information is in venues-long.bib and venues-short.bib
 
 @inproceedings{stoica:chord:sigcomm2001,
 author = "Stoica, I. and Morris, R. and Karger, D. and Kaashoek, F. and Balakrishnan, H.",
 title = "Chord: A Scalable Peer-to-Peer Lookup Service for {I}nternet Applications",
-booktitle = sigcomm2001,
+crossref = {sigcomm01},
 pages = "149--160",
-year = "2001",
-month = "August",
 abstract = {A fundamental problem that confronts peer-to-peer applications is to efficiently locate the node that stores a particular data item. This paper presents Chord, a distributed lookup protocol that addresses this problem. Chord provides support for just one operation: given a key, it maps the key onto a node. Data location can be easily implemented on top of Chord by associating a key with each data item, and storing the key/data item pair at the node to which the key maps. Chord adapts efficiently as nodes join and leave the system, and can answer queries even if the system is continuously changing. Results from theoretical analysis, simulations, and experiments show that Chord is scalable, with communication cost and the state maintained by each node scaling logarithmically with the number of Chord nodes.}
 }
 
 @inproceedings{ratnasamy:can:sigcomm2001,
 author = "Ratnasamy, S. and Francis, P. and Handley, M. and Karp, R. and Shenker, S.",
 title = "A Scalable Content Addressable Network",
-booktitle = sigcomm2001,
+crossref = {sigcomm01},
 pages = "161--172",
-year = "2001",
-month = "August",
 }
