Fixing captialization goofs in references.

--- a/doc/references/fast.bib
+++ b/doc/references/fast.bib
@@ -11,7 +11,7 @@
 
 @inproceedings{abd-el-malek:ursa-minor:fast2005,
  author = {Abd-El-Malek, Michael and Courtright,II, William V. and Cranor, Chuck and Ganger, Gregory R. and Hendricks, James and Klosterman, Andrew J. and Mesnier, Michael and Prasad, Manish and Salmon, Brandon and Sambasivan, Raja R. and Sinnamohideen, Shafeeq and Strunk, John D. and Thereska, Eno and Wachs, Matthew and Wylie, Jay J.},
- title = {Ursa minor: versatile cluster-based storage},
+ title = {{Ursa} {Minor}: {Versatile} cluster-based storage},
  crossref = {fast05},
  pages = {59--72},
  abstract = {No single encoding scheme or fault model is optimal for all data. A versatile storage system allows them to be matched to access patterns, reliability requirements, and cost goals on a per-data item basis. Ursa Minor is a cluster-based storage system that allows data-specific selection of, and on-line changes to, encoding schemes and fault models. Thus, different data types can share a scalable storage infrastructure and still enjoy specialized choices, rather than suffering from "one size fits all." Experiments with Ursa Minor show performance benefits of 2-3× when using specialized choices as opposed to a single, more general, configuration. Experiments also show that a single cluster supporting multiple workloads simultaneously is much more efficient when the choices are specialized for each distribution rather than forced to use a "one size fits all" configuration. When using the specialized distributions, aggregate cluster throughput nearly doubled.}
