--- a/doc/references/sosp.bib
+++ b/doc/references/sosp.bib
@@ -13,7 +13,7 @@ crossref = {sosp2007},
                Alan J. Demers and
                Mike Spreitzer and
                Carl Hauser},
-  title     = {Managing Update Conflicts in Bayou, a Weakly Connected Replicated Storage System},
+  title     = {Managing Update Conflicts in {Bayou}, a Weakly Connected Replicated Storage System},
   crossref = {sosp1995},
   pages     = {172--183},
   bibsource = {DBLP, http://dblp.uni-trier.de}
@@ -22,7 +22,7 @@ crossref = {sosp2007},
 
 @inproceedings{ghemawat:google-fs:sosp2003,
   author = {Ghemawat, Sanjay and Gobioff, Howard and Leung, Shun-Tak},
-  title = {The {G}oogle {F}ile {S}ystem},
+  title = {The {G}oogle File System},
   crossref = {sosp2003},
   doi = {10.1145/945445.945450},
   keywords = {architecture, system},
