* DSN: Minor bib fixes.

--- a/doc/references/nsdi.bib
+++ b/doc/references/nsdi.bib
@@ -10,7 +10,7 @@
 
 @inproceedings{stribling:wheelfs:nsdi2009,
  author = {Stribling, Jeremy and Sovran, Yair and Zhang, Irene and Pretzer, Xavid and Li, Jinyang and Kaashoek, M. Frans and Morris, Robert},
- title = {Flexible, wide-area storage for distributed systems with WheelFS},
+ title = "Flexible, wide-area storage for distributed systems with {WheelFS}",
  crossref = {nsdi09},
  pages = {43--58},
 }
