Updates to lintel bib for OSDI related work. Focus on failure analysis papers.

--- a/doc/references/cacm.bib
+++ b/doc/references/cacm.bib
@@ -46,3 +46,17 @@ pages = "63--74",
  publisher = {ACM},
  address = {New York, NY, USA},
  }
+
+@article{elerath:disk-drives-good-bad-ugly:cacm2009,
+ author = {Elerath, Jon},
+ title = {Hard-disk drives: the good, the bad, and the ugly},
+ journal = cacm,
+ volume = {52},
+ number = {6},
+ year = {2009},
+ issn = {0001-0782},
+ pages = {38--45},
+ doi = {http://doi.acm.org/10.1145/1516046.1516059},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ }
