--- a/doc/references/venues-short.bib
+++ b/doc/references/venues-short.bib
@@ -193,6 +193,20 @@
  month = {December},
 }
 
+@PROCEEDINGS { fast07,
+ title = {FAST'07},
+ booktitle = {FAST'07},
+ year = {2007},
+ month = {February},
+}
+
+@PROCEEDINGS { fast10,
+ title = {FAST'10},
+ booktitle = {FAST'10},
+ year = {2010},
+ month = {February},
+}
+
 % SIGCOM
 
 @PROCEEDINGS { sigcomm01,
