--- a/doc/references/dsn.bib
+++ b/doc/references/dsn.bib
@@ -24,4 +24,16 @@ abstract={ This paper describes a decentralized consistency protocol for surviva
   abstract = {We analyze the problem of efficient distributed storage of information in a message-passing environment where both less than one third of the servers, as well as an arbitrary number of clients, might exhibit Byzantine behavior, and where clients might access data concurrently. In particular, we provide a simulation of a multiple-writer multiple-reader atomic read/write register in this setting which uses erasure-coding for storage-efficiency and achieves optimal resilience. Additionally, we give the first implementation of non-skipping timestamps which provides optimal resilience and withstands Byzantine clients; it is based on threshold cryptography.}
 }
 
+@INPROCEEDINGS{schroeder:failures-in-hpc:dsn2006,
+title={A large-scale study of failures in high-performance computing systems},
+author={Schroeder, B. and Gibson, G.A.},
+crossref = {dsn06},
+pages={249-258},
+abstract={Designing highly dependable systems requires a good understanding of failure characteristics. Unfortunately, little raw data on failures in large IT installations is publicly available. This paper analyzes failure data recently made publicly available by one of the largest high-performance computing sites. The data has been collected over the past 9 years at Los Alamos National Laboratory and includes 23000 failures recorded on more than 20 different systems, mostly large clusters of SMP and NUMA nodes. We study the statistics of the data, including the root cause of failures, the mean time between failures, and the mean time to repair. We find for example that average failure rates differ wildly across systems, ranging from 20-1000 failures per year, and that time between failures is modeled well by a Weibull distribution with decreasing hazard rate. From one system to another, mean repair time varies from less than an hour to more than a day, and repair times are well modeled by a lognormal distribution},
+doi={10.1109/DSN.2006.5},
+ISSN={}, 
+}
+
+
+
 
