--- a/doc/references/venues-long.bib
+++ b/doc/references/venues-long.bib
@@ -203,6 +203,26 @@
  address = {Berkeley, CA, USA},
 }
 
+@PROCEEDINGS { fast07,
+ title = {FAST'07: Proceedings of the 5th USENIX Conference on File and Storage Technologies},
+ booktitle = {FAST'07: Proceedings of the 5th USENIX Conference on File and Storage Technologies},
+ year = {2007},
+ month = {March},
+ location = {San Jose, CA},
+ publisher = {USENIX Association},
+ address = {Berkeley, CA, USA},
+}
+
+@PROCEEDINGS { fast10,
+ title = {FAST'10: Proceedings of the 8th USENIX Conference on File and Storage Technologies},
+ booktitle = {FAST'10: Proceedings of the 8th USENIX Conference on File and Storage Technologies},
+ year = {2010},
+ month = {March},
+ location = {San Jose, CA},
+ publisher = {USENIX Association},
+ address = {Berkeley, CA, USA},
+}
+
 % SIGCOM
 
 @PROCEEDINGS { sigcomm01,
