* OSDI: More references for related work etc.

--- a/doc/references/csur.bib
+++ b/doc/references/csur.bib
@@ -1,5 +1,20 @@
 @string{csur = "ACM Computing Surveys"}
 
+@article{davidson:consistency-in-partitioned-networks:csur1985,
+ author = {Susan B. Davidson and Hector Garcia-Molina and Dale Skeen},
+ title = {Consistency in  partitioned networks},
+ journal = csur,
+ volume = {17},
+ number = {3},
+ year = {1985},
+ month = {September},
+ issn = {0360-0300},
+ pages = {341--370},
+ doi = {http://doi.acm.org/10.1145/5505.5508},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ }
+% DUPLICATE OF ABOVE. Changing citation key to match naming standard.
 @article{Davidson85Consistency,
  author = {Susan B. Davidson and Hector Garcia-Molina and Dale Skeen},
  title = {Consistency in  partitioned networks},
@@ -25,3 +40,18 @@ year = "1990",
 month = "December",
 pages = "299--319",
 }
+
+@article{saito:optimistic-replication:csur2005,
+ author = {Saito, Yasushi and Shapiro, Marc},
+ title = {Optimistic replication},
+ journal = {ACM Comput. Surv.},
+ volume = {37},
+ number = {1},
+ year = {2005},
+ issn = {0360-0300},
+ pages = {42--81},
+ doi = {http://doi.acm.org/10.1145/1057977.1057980},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ }
+
