--- a/doc/references/disc.bib
+++ b/doc/references/disc.bib
@@ -1,3 +1,12 @@
+@inproceedings{aiyer:availability-of-non-strict-quorums:disc2005,
+ author = {Amitanand Aiyer and Lorenzo Alvisi and Rida A. Bazzi},
+ title = {On the Availability of Non-strict Quorum Systems},
+ booktitle = "Proc. 19th DISC",
+ year = {2005},
+ month = {September},
+ pages = {48--62},
+}
+% DUPLICATE OF ABOVE. Changing citation key to match naming standard.
 @inproceedings{Aiyer05Availability,
  author = {Amitanand Aiyer and Lorenzo Alvisi and Rida A. Bazzi},
  title = {On the Availability of Non-strict Quorum Systems},
