--- a/doc/references/distributedcomputing.bib
+++ b/doc/references/distributedcomputing.bib
@@ -1,3 +1,15 @@
+@article{lamport:on-interprocess-communication:distcomp1986,
+  author    = {Leslie Lamport},
+  title     = {On interprocess communication, {P}art {I}: {B}asic formalism and {P}art {II}: {A}lgorithms.},
+  journal   = {Distributed Computing},
+  volume    = {1},
+  number    = {2},
+  year      = {1986},
+  month     = {June},
+  pages     = {77--101},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+% DUPLICATE OF ABOVE. Changing citation key to match naming standard.
 @article{Lamport86Interprocess,
   author    = {Leslie Lamport},
   title     = {On interprocess communication, {P}art {I}: {B}asic formalism and {P}art {II}: {A}lgorithms.},
@@ -21,3 +33,18 @@
      PUBLISHER = {Springer-Verlag},
      KEY = {Aguilera00}
 }
+
+@article{lee:randomized-registers:distcomp2005,
+ author = {Hyunyoung Lee and Jennifer L. Welch},
+ title = {Randomized registers and iterative algorithms},
+ journal = {Distributed Computing},
+ volume = {17},
+ number = {3},
+ year = {2005},
+ month = {March},
+ issn = {0178-2770},
+ pages = {209--221},
+ doi = {http://dx.doi.org/10.1007/s00446-004-0106-3},
+ publisher = {Springer-Verlag},
+ address = {London, UK},
+ }
