--- a/doc/references/dsn.bib
+++ b/doc/references/dsn.bib
@@ -6,6 +6,20 @@ crossref = {dsn00},
 pages={417--426},
 }
 
+@inproceedings{alvisi:dynamic-byzantine-quorums:dsn2000,
+author={Alvisi, L. and Malkhi, D. and Pierce, E. and Reiter, M.K. and Wright, R.N.},
+journal={Dependable Systems and Networks, 2000. DSN 2000. Proceedings International Conference on}, 
+title={Dynamic {B}yzantine quorum systems},
+year={2000},
+month={},
+volume={},
+number={},
+pages={283 -292},
+keywords={dynamic byzantine quorum systems;efficient low-threshold mode;fault-tolerant replicated services;protocols;quorum-based Byzantine fault-tolerant data service;resilience threshold;server failures;server faults;static threshold limit;distributed shared memory systems;fault tolerant computing;},
+doi={10.1109/ICDSN.2000.857551},
+ISSN={},}
+
+
 @inproceedings{goodson:efficient-byzantine-tolerant-erasure-coded-storage:dsn2004,
 title={Efficient {B}yzantine-tolerant erasure-coded storage},
 author={Goodson, G.R. and Wylie, J.J. and Ganger, G.R. and Reiter, M.K.},
