--- a/doc/references/nsdi.bib
+++ b/doc/references/nsdi.bib
@@ -8,6 +8,19 @@
   note = "Available at \url{http://www.usenix.org/events/nsdi06/tech/full_papers/reynolds/reynolds.pdf} Accessed June 2009"
 }
 
+@inproceedings{belaramani:practi-replication:nsdi2006, 
+author = {N. Belaramani and M. Dahlin and L. Gao and A. Nayate and A. Venkataramani and P. Yalagandula and J. Zheng}, 
+ title = {{PRACTI} Replication}, 
+ booktitle = {{USENIX} Symposium on Networked Systems Design and Implementation ({NSDI})}, 
+ year = 2006 , 
+ month = May, 
+ abstract = "http://www.cs.utexas.edu/users/dahlin/papers/PRACTI-FINAL-NSDI-abstract.html", 
+ pdf = "http://www.cs.utexas.edu/users/dahlin/papers/FINAL-PRACTI-NSDI.pdf", 
+ postscript = "http://www.cs.utexas.edu/users/dahlin/papers/FINAL-PRACTI-NSDI.ps", 
+ extendedpdf = "http://www.cs.utexas.edu/users/dahlin/papers/PRACTI-2005-10-extended.pdf", 
+ category = "PRACTI,WANrepl,webos,c0pe,selected" 
+ } 
+
 @inproceedings{stribling:wheelfs:nsdi2009,
  author = {Stribling, Jeremy and Sovran, Yair and Zhang, Irene and Pretzer, Xavid and Li, Jinyang and Kaashoek, M. Frans and Morris, Robert},
  title = "Flexible, wide-area storage for distributed systems with {WheelFS}",
