--- a/doc/references/os-review.bib
+++ b/doc/references/os-review.bib
@@ -15,6 +15,20 @@
  note = {Available at \url{http://portal.acm.org/citation.cfm?id=1067627.806606}}
  }
 
+@article{babaouglu:partition-aware-network-applications:os-review1998,
+ author = { Babao\u{g}lu, \"{O}zalp and Davoli, Renzo and Montresor, Alberto andSegala, Roberto},
+ title = {System support for partition-aware network applications},
+ journal = SIGOPSOSR, 
+ volume = {32},
+ number = {1},
+ year = {1998},
+ issn = {0163-5980},
+ pages = {41--56},
+ doi = {http://doi.acm.org/10.1145/280559.280567},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ }
+
 @article{anderson+amv:dataseries:2009,
     author = {Eric Anderson and Martin Arlitt and Charles B. Morrey III and Alistair Veitch},
     title = "{DataSeries: An Efficient, Flexible Data Format for Structured Serial Data}",
@@ -39,3 +53,4 @@
  address = {New York, NY, USA},
  abstract = {Gossip-based mechanisms are touted for their simplicity, limited resource usage, robustness to failures, and tunable system behavior. These qualities make gossiping an ideal mechanism for storage systems that are responsible for maintaining and updating data in a mist of failures and limited resources (e.g., intermittent network connectivity, limited bandwidth, constrained communication range, or limited battery power). We focus on persistent storage systems that, unlike mere caches, are responsible for both the durability and the consistency of data. Examples of such systems may be encountered in many different environments, in particular: wide-area networks (constrained by limited bandwidth), wireless sensor networks (characterized by limited resources), and mobile ad hoc networks (suffering from intermittent connectivity). In this paper, we demonstrate the qualities of gossiping in these three respective environments.}
 }
+
