--- a/doc/references/sigact.bib
+++ b/doc/references/sigact.bib
@@ -1,3 +1,14 @@
+@article{gilbert:brewers-conjecture:sigact02,
+author = "Gilbert, Seth and Lynch, Nancy",
+title = "Brewer's conjecture and the feasibility of consistent, available, partition-tolerant {W}eb services",
+journal = "ACM SIGACT News",
+volume = "33",
+number = "2",
+year = "2002",
+month = "June",
+pages = "51--59",
+}
+% DUPLICATE OF ABOVE. Changing citation key to match naming standard.
 @article{Gilbert02,
 author = "Gilbert, Seth and Lynch, Nancy",
 title = "Brewer's conjecture and the feasibility of consistent, available, partition-tolerant {W}eb services",
