* OSDI: bib changes I forgot to commit last week.

--- a/doc/references/csur.bib
+++ b/doc/references/csur.bib
@@ -44,7 +44,7 @@ pages = "299--319",
 @article{saito:optimistic-replication:csur2005,
  author = {Saito, Yasushi and Shapiro, Marc},
  title = {Optimistic replication},
- journal = {ACM Comput. Surv.},
+ journal = csur,
  volume = {37},
  number = {1},
  year = {2005},
