--- a/doc/references/os-review.bib
+++ b/doc/references/os-review.bib
@@ -16,9 +16,9 @@
  }
 
 @article{babaouglu:partition-aware-network-applications:os-review1998,
- author = { Babao\u{g}lu, \"{O}zalp and Davoli, Renzo and Montresor, Alberto andSegala, Roberto},
+ author = { Babao\u{g}lu, \"{O}zalp and Davoli, Renzo and Montresor, Alberto and Segala, Roberto},
  title = {System support for partition-aware network applications},
- journal = SIGOPSOSR, 
+ journal = sigopsosr, 
  volume = {32},
  number = {1},
  year = {1998},
