* OSDI: bib changes I forgot to commit last week.

--- a/doc/references/web-sites.bib
+++ b/doc/references/web-sites.bib
@@ -170,5 +170,6 @@
 @misc{voldemort:web,
   title = "Voldemort",
   note = {Available at \url{http://project-voldemort.com/}. Accessed March 2010.},
+  key = "voldemort"
 }
 
