* DSN: References clean up. (long short venue for PODC01)

--- a/doc/references/fast.bib
+++ b/doc/references/fast.bib
@@ -30,6 +30,12 @@ crossref = {fast07},
 PAGES = "1--16",
 }
 
+@INPROCEEDINGS{plank:performance-eval-ec:fast2009,
+author = "J. S. Plank and J. Luo and C. D. Schuman and L. Xu and Z. Wilcox-O'Hearn",
+title = "A  Performance Evaluation and Examination of Open-Source Erasure Coding Libraries For Storage",
+crossref = {fast09},
+}
+
 @inproceedings{schroeder:understanding-latent-sector-errors:fast2010,
 title = "{Understanding Latent Sector Errors and How to Protect Against Them}",
 author = "{Bianca Schroeder and Sotirios Damouras and Phillipa Gill}",
