--- a/doc/references/venues-long.bib
+++ b/doc/references/venues-long.bib
@@ -213,6 +213,16 @@
  address = {Berkeley, CA, USA},
 }
 
+@PROCEEDINGS { fast09,
+ title = {FAST'09: Proceedings of the 7th USENIX Conference on File and Storage Technologies},
+ booktitle = {FAST'09: Proceedings of the 7th USENIX Conference on File and Storage Technologies},
+ year = {2009},
+ month = {February},
+ location = {San Francisco, CA},
+ publisher = {USENIX Association},
+ address = {Berkeley, CA, USA},
+}
+
 @PROCEEDINGS { fast10,
  title = {FAST'10: Proceedings of the 8th USENIX Conference on File and Storage Technologies},
  booktitle = {FAST'10: Proceedings of the 8th USENIX Conference on File and Storage Technologies},
@@ -230,4 +240,13 @@
  booktitle = {SIGCOMM '01: Proceedings of the 2001 Conference on Applications, Technologies, Architectures, and Protocols for Computer Communications},
  year = {2001},
  month = {August},
+}
+
+% PODC
+@PROCEEDINGS { podc2001,
+ title = {PODC '01: Proceedings of the Twentieth Annual ACM Symposium on Principles of Distributed Computing},
+ booktitle = {PODC '01: Proceedings of the Twentieth Annual ACM Symposium on Principles of Distributed Computing},
+ year = {2001},
+ publisher = {ACM},
+ location = {Newport, RI, United States},
 }
