--- a/doc/references/venues-short.bib
+++ b/doc/references/venues-short.bib
@@ -200,6 +200,13 @@
  month = {February},
 }
 
+@PROCEEDINGS { fast09,
+ title = {FAST'09},
+ booktitle = {FAST'09},
+ year = {2009},
+ month = {February},
+}
+
 @PROCEEDINGS { fast10,
  title = {FAST'10},
  booktitle = {FAST'10},
@@ -215,3 +222,13 @@
  year = {2001},
  month = {August},
 }
+
+% PODC
+@PROCEEDINGS { podc2001,
+ title = {PODC'01},
+ booktitle = {PODC'01},
+ year = {2001},
+ month = {August},
+}
+
+
